fixes button wrapping issue

--- a/source/scss/modules/_M9-Chat-Launch.scss
+++ b/source/scss/modules/_M9-Chat-Launch.scss
@@ -3,4 +3,7 @@
   .border-bottom {
     border-bottom: 1px solid $primary-2;
   }
+  button {
+    min-width: 134px;
+  }
 }
